--- a/templates/about.html
+++ b/templates/about.html
@@ -6,6 +6,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>His is the about section annd a trial version of the about page {{ name }}</h1>
+    <h1>His is the about section annd a trial version of the about page {{ name2 }} </h1>
+    <p1> paragraph checking for name </p1>
 </body>
 </html>
