--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>My Introduction</title>
+    <title>Tittle of my page</title>
 </head>
 <body>
-    <p>Hello, my name is [Your Name].</p>
-    <p>I am a [Your Profession] based in [Your Location].</p>
-    <p>I have a passion for [Your Interests/Hobbies].</p>
-    <p>Feel free to reach out to me at [Your Email Address].</p>
+<p>This is a flask tutorial site, used to learn flask. This page is the index page</p>
 </body>
 </html>
